--- a/p8105_hw3_WL3011.md
+++ b/p8105_hw3_WL3011.md
@@ -11,6 +11,7 @@ library(dplyr)
 library(knitr)
 library(kableExtra)
 library(ggplot2)
+library(patchwork) 
 ```
 
 ## Problem 1
@@ -128,20 +129,19 @@ avg_tmax_df = ny_noaa |>
     names_prefix = "month_"
   )
 
-# two-panel plot
-ggplot(avg_tmax_df, aes(x = year)) +
-  geom_line(aes(y = month_1, color = "January", group = id), size = .1) +
-  geom_line(aes(y = month_7, color = "July", group = id), size = .1) +
-  geom_point(aes(y = month_1, color = "January"), size = .2) +
-  geom_point(aes(y = month_7, color = "July"), size = .2) +
-  scale_color_manual(
-    values = c("January" = "skyblue", "July" = "orange"),
-    breaks = c("July", "January")  
-  ) +
+# Create separate plots for January and July
+
+# Plot for January
+p_january = ggplot(avg_tmax_df, aes(x = year)) +
+  geom_line(aes(y = month_1, color = id, group = id), size = .1) +
+  geom_point(aes(y = month_1, color = id), size = .2) +
   labs(
     x = "Year", 
     y = "Average Max Temperature (°C)", 
-    color = "Month") +
+    color = "Month",
+    title = "January"
+    ) +
+  guides(color = "none") +
   theme_minimal()
 ```
 
@@ -151,14 +151,78 @@ ggplot(avg_tmax_df, aes(x = year)) +
     ## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
     ## generated.
 
-    ## Warning: Removed 3261 rows containing missing values or values outside the scale range
-    ## (`geom_line()`).
+``` r
+  scale_color_discrete() 
+```
 
-    ## Warning: Removed 3251 rows containing missing values or values outside the scale range
+    ## <ggproto object: Class ScaleDiscrete, Scale, gg>
+    ##     aesthetics: colour
+    ##     axis_order: function
+    ##     break_info: function
+    ##     break_positions: function
+    ##     breaks: waiver
+    ##     call: call
+    ##     clone: function
+    ##     dimension: function
+    ##     drop: TRUE
+    ##     expand: waiver
+    ##     get_breaks: function
+    ##     get_breaks_minor: function
+    ##     get_labels: function
+    ##     get_limits: function
+    ##     get_transformation: function
+    ##     guide: legend
+    ##     is_discrete: function
+    ##     is_empty: function
+    ##     labels: waiver
+    ##     limits: NULL
+    ##     make_sec_title: function
+    ##     make_title: function
+    ##     map: function
+    ##     map_df: function
+    ##     n.breaks.cache: NULL
+    ##     na.translate: TRUE
+    ##     na.value: grey50
+    ##     name: waiver
+    ##     palette: function
+    ##     palette.cache: NULL
+    ##     position: left
+    ##     range: environment
+    ##     rescale: function
+    ##     reset: function
+    ##     train: function
+    ##     train_df: function
+    ##     transform: function
+    ##     transform_df: function
+    ##     super:  <ggproto object: Class ScaleDiscrete, Scale, gg>
+
+``` r
+# Plot for July
+p_july = ggplot(avg_tmax_df, aes(x = year)) +
+  geom_line(aes(y = month_7, color = id, group = id), size = .1) +
+  geom_point(aes(y = month_7, color = id), size = .2) +
+  labs(
+    x = "Year", 
+    y = "Average Max Temperature (°C)", 
+    color = "Month",
+    title = "July"
+    ) +
+  guides(color = "none") +
+  theme_minimal() +
+  scale_color_discrete() 
+
+# Combine
+p_january + p_july
+```
+
+    ## Warning: Removed 3261 rows containing missing values or values outside the scale range
     ## (`geom_line()`).
 
     ## Warning: Removed 3329 rows containing missing values or values outside the scale range
     ## (`geom_point()`).
+
+    ## Warning: Removed 3251 rows containing missing values or values outside the scale range
+    ## (`geom_line()`).
 
     ## Warning: Removed 3348 rows containing missing values or values outside the scale range
     ## (`geom_point()`).
@@ -170,8 +234,7 @@ alt="Figure 2. Average Max Temperature in January and July Across Years" />
 January and July Across Years</figcaption>
 </figure>
 
-Figure @ref(fig:AMT) above shows a few patterns and observations stand
-out:
+Figure 2 above shows a few patterns and observations stand out:
 
 - Seasonal Variation:
 
@@ -198,12 +261,61 @@ and 2010 and had discrete extremes at some stations in 2004. This could
 indicate that January weather is more unpredictable, perhaps due to
 snow, storms, or varying cold fronts.
 
-### 1.3 Plot
+### 1.3 tmax vs Tmin
 
-Make a two-panel plot showing (i) tmax vs tmin for the full dataset
-(note that a scatterplot may not be the best option); and (ii) make a
-plot showing the distribution of snowfall values greater than 0 and less
-than 100 separately by year.
+Make a two-panel plot showing (note that a scatterplot may not be the
+best option);
+
+``` r
+p_tmax = ggplot(ny_noaa, aes(x = tmax)) +
+  geom_density(fill = "orange", alpha = 0.5) +
+  labs(title = "Maximum Temperature",
+       x = "Maximum Temperature (°C)",
+       y = "Density") +
+  theme_minimal()
+
+p_tmin = ggplot(ny_noaa, aes(x = tmin)) +
+  geom_density(fill = "skyblue", alpha = 0.5) +
+  labs(title = "Minimum Temperature",
+       x = "Minimum Temperature (°C)",
+       y = "Density") +
+  theme_minimal()
+
+# Combine 
+p_tmin + p_tmax
+```
+
+    ## Warning: Removed 1134420 rows containing non-finite outside the scale range
+    ## (`stat_density()`).
+
+    ## Warning: Removed 1134358 rows containing non-finite outside the scale range
+    ## (`stat_density()`).
+
+<figure>
+<img src="p8105_hw3_WL3011_files/figure-gfm/MAXMIN-1.png"
+alt="Figure 3. Density Plot of Maximum vs Minimum Temperature" />
+<figcaption aria-hidden="true">Figure 3. Density Plot of Maximum vs
+Minimum Temperature</figcaption>
+</figure>
+
+### 1.4 Distribution of Snowfall
+
+2)  make a plot showing the distribution of snowfall values greater than
+    0 and less than 100 separately by year.
+
+``` r
+p2 = ny_noaa |>
+  filter(snow > 0 & snow < 100) |>
+  ggplot(aes(x = snow, fill = factor(year))) +
+  geom_histogram(position = "dodge", bins = 10, alpha = 0.7) +  # Histogram
+  labs(
+    title = "Distribution of Snowfall Values (0 < Snowfall < 100)",
+    x = "Snowfall (mm)",
+    y = "Frequency",
+    fill = "Year"
+  ) +
+  theme_minimal()
+```
 
 ## II. Problem 2
 
