--- a/p8105_hw3_WL3011.md
+++ b/p8105_hw3_WL3011.md
@@ -307,15 +307,25 @@ Minimum Temperature</figcaption>
 p2 = ny_noaa |>
   filter(snow > 0 & snow < 100) |>
   ggplot(aes(x = snow, fill = factor(year))) +
-  geom_histogram(position = "dodge", bins = 10, alpha = 0.7) +  # Histogram
+  geom_histogram(position = "dodge", bins = 10) +  
   labs(
-    title = "Distribution of Snowfall Values (0 < Snowfall < 100)",
     x = "Snowfall (mm)",
     y = "Frequency",
     fill = "Year"
   ) +
-  theme_minimal()
+  theme_minimal() +
+  theme(legend.position = "none") + 
+  facet_wrap(~ year, nrow = 6, ncol = 5) 
+
+print(p2)
 ```
+
+<figure>
+<img src="p8105_hw3_WL3011_files/figure-gfm/unnamed-chunk-3-1.png"
+alt="Figure 4. Distribution of Snowfall Values" />
+<figcaption aria-hidden="true">Figure 4. Distribution of Snowfall
+Values</figcaption>
+</figure>
 
 ## II. Problem 2
 
