Load and organize the datasets as requested.

--- a/p8105_hw3_WL3011.md
+++ b/p8105_hw3_WL3011.md
@@ -293,8 +293,8 @@ p_tmin + p_tmax
 
 <figure>
 <img src="p8105_hw3_WL3011_files/figure-gfm/MAXMIN-1.png"
-alt="Figure 3. Density Plot of Maximum vs Minimum Temperature" />
-<figcaption aria-hidden="true">Figure 3. Density Plot of Maximum vs
+alt="Figure 3. Density Plot of Maximum and Minimum Temperature" />
+<figcaption aria-hidden="true">Figure 3. Density Plot of Maximum and
 Minimum Temperature</figcaption>
 </figure>
 
