--- a/p8105_hw3_WL3011.Rmd
+++ b/p8105_hw3_WL3011.Rmd
@@ -162,7 +162,7 @@ Compared to the July data, the January data fluctuated more between 1981 and 201
 
 
 
-### 1.3 tmax vs Tmin
+### 1.3 Tmax vs Tmin
 
 
 Make a two-panel plot showing  (note that a scatterplot may not be the best option); 
@@ -213,5 +213,47 @@ print(p2)
 
 ## II. Problem 2
 
+### 2.1 Load and Organize Datasets
+
+*   Include all originally observed variables;  
+*   Exclude participants less than 21 years of age;
+*   Exclude participants with missing demographic data;  
+*   Encode data with reasonable variable classes (i.e. not numeric, and using factors with the ordering of tables and plots in mind).
+
+```{r}
+accel_df = 
+  read.csv("./nhanes_accel.csv", 
+           na = c("NA", ".", "")) |>
+  janitor::clean_names() 
+
+covar_df = 
+  read.csv("./nhanes_covar.csv", 
+           na = c("NA", ".", ""), skip = 4) |>
+  janitor::clean_names() 
+
+nhanes_df = 
+  inner_join(covar_df, accel_df, by = "seqn") |>
+  filter(age >= 21) |>
+  drop_na() |>
+  mutate(          
+    sex = case_match(
+      sex,
+      1 ~ "male",
+      2 ~ "female" 
+    )
+  ) |>
+  mutate(
+    education = case_match(
+      education,
+      1 ~ "Less_than_high_school",
+      2 ~ "High_school_equivalent",
+      3  ~ "More_than_high_school"
+    )
+  )
+
+```
+
 
 ## III. Problem 3
+
+
