--- a/p8105_hw3_WL3011.md
+++ b/p8105_hw3_WL3011.md
@@ -1,7 +1,7 @@
 p8105_hw3_WL3011
 ================
 Weiqi Liang
-2024-10-12
+2024-10-13
 
 ## Setup File
 
@@ -133,7 +133,7 @@ avg_tmax_df = ny_noaa |>
 
 # Plot for January
 p_january = ggplot(avg_tmax_df, aes(x = year)) +
-  geom_line(aes(y = month_1, color = id, group = id), size = .1) +
+  geom_line(aes(y = month_1, color = id, group = id), size = .1, alpha = .7) +
   geom_point(aes(y = month_1, color = id), size = .2) +
   labs(
     x = "Year", 
@@ -199,7 +199,7 @@ p_january = ggplot(avg_tmax_df, aes(x = year)) +
 ``` r
 # Plot for July
 p_july = ggplot(avg_tmax_df, aes(x = year)) +
-  geom_line(aes(y = month_7, color = id, group = id), size = .1) +
+  geom_line(aes(y = month_7, color = id, group = id), size = .1, alpha = .7) +
   geom_point(aes(y = month_7, color = id), size = .2) +
   labs(
     x = "Year", 
@@ -212,19 +212,19 @@ p_july = ggplot(avg_tmax_df, aes(x = year)) +
   scale_color_discrete() 
 
 # Combine
-p_january + p_july
+p_july / p_january
 ```
-
-    ## Warning: Removed 3261 rows containing missing values or values outside the scale range
-    ## (`geom_line()`).
-
-    ## Warning: Removed 3329 rows containing missing values or values outside the scale range
-    ## (`geom_point()`).
 
     ## Warning: Removed 3251 rows containing missing values or values outside the scale range
     ## (`geom_line()`).
 
     ## Warning: Removed 3348 rows containing missing values or values outside the scale range
+    ## (`geom_point()`).
+
+    ## Warning: Removed 3261 rows containing missing values or values outside the scale range
+    ## (`geom_line()`).
+
+    ## Warning: Removed 3329 rows containing missing values or values outside the scale range
     ## (`geom_point()`).
 
 <figure>
@@ -261,7 +261,7 @@ and 2010 and had discrete extremes at some stations in 2004. This could
 indicate that January weather is more unpredictable, perhaps due to
 snow, storms, or varying cold fronts.
 
-### 1.3 tmax vs Tmin
+### 1.3 Tmax vs Tmin
 
 Make a two-panel plot showing (note that a scatterplot may not be the
 best option);
@@ -328,5 +328,277 @@ Values</figcaption>
 </figure>
 
 ## II. Problem 2
+
+### 2.1 Load and Organize Datasets
+
+- Include all originally observed variables;  
+- Exclude participants less than 21 years of age;
+- Exclude participants with missing demographic data;  
+- Encode data with reasonable variable classes (i.e. not numeric, and
+  using factors with the ordering of tables and plots in mind).
+
+``` r
+accel_df = 
+  read.csv("./nhanes_accel.csv", 
+           na = c("NA", ".", "")) |>
+  janitor::clean_names() |>
+  drop_na() 
+
+covar_df = 
+  read.csv("./nhanes_covar.csv", 
+           na = c("NA", ".", ""), skip = 4) |>
+  janitor::clean_names() |>
+  drop_na() |>
+  mutate(          
+    gender = case_match(
+      sex,
+      1 ~ "male",
+      2 ~ "female" 
+    )
+  ) |>
+  mutate(
+    category = case_match(
+      education,
+      1 ~ "Less_than_high_school",
+      2 ~ "High_school_equivalent",
+      3  ~ "More_than_high_school"
+    )
+  )
+
+nhanes_df = 
+  inner_join(covar_df, accel_df, by = "seqn") |>
+  filter(age >= 21)
+```
+
+### 2.2 Create Visualization
+
+#### 2.2.1 Table for Participants’ Number
+
+The reader-friendly table for the number of men and women in each
+education category is as follows:
+
+``` r
+num_sex_df = 
+  covar_df |>
+  count(sex, education, name = "number") |> 
+  arrange(sex, education) |>
+  mutate(          
+    sex = case_match(
+      sex,
+      1 ~ "male",
+      2 ~ "female" 
+    )
+  ) |>
+  mutate(
+    education = case_match(
+      education,
+      1 ~ "Less_than_high_school",
+      2 ~ "High_school_equivalent",
+      3  ~ "More_than_high_school"
+    )
+  )
+
+
+
+kable(num_sex_df, 
+      col.names = c("Gender", "Education", "Number"),
+      caption = "Table 1. Number of Men and Women by Education Category")
+```
+
+| Gender | Education              | Number |
+|:-------|:-----------------------|-------:|
+| male   | Less_than_high_school  |     27 |
+| male   | High_school_equivalent |     36 |
+| male   | More_than_high_school  |     56 |
+| female | Less_than_high_school  |     28 |
+| female | High_school_equivalent |     23 |
+| female | More_than_high_school  |     59 |
+
+Table 1. Number of Men and Women by Education Category
+
+The plot consists of three facets representing the three education
+categories. Each facet shows the age distribution for men and women
+using overlapping density plots.
+
+``` r
+#label for the 3 small plot
+edu_labels = c(
+  "1" = "Less than high school",
+  "2" = "High school equivalent",
+  "3" = "More than high school"
+)
+
+ggplot(covar_df, aes(x = age, fill = gender)) +
+  geom_density(alpha = 0.3) + 
+  facet_wrap(~ education, nrow = 1, labeller = as_labeller(edu_labels)) +  
+  labs(
+    x = "Age", 
+    y = "Density",
+    fill = "sex"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "top")
+```
+
+<figure>
+<img src="p8105_hw3_WL3011_files/figure-gfm/age_sex-1.png"
+alt="Figure 5. Age Distributions by Sex and Education Category" />
+<figcaption aria-hidden="true">Figure 5. Age Distributions by Sex and
+Education Category</figcaption>
+</figure>
+
+**Observations by Education Category:**
+
+1.  Less than High School:
+
+- A prominent peak around age 70 is visible for both genders.
+
+- Women generally have higher densities after age 50, suggesting a
+  larger proportion of older women in this education level.
+
+2.  High School Equivalent:
+
+- Both men and women show two peaks: one around age 30 and another
+  around age 60.
+
+- There seems to be a higher concentration of older individuals (60+)
+  compared to younger ones for female group.
+
+3.  More than High School:
+
+- There is a strong peak around age 30 for both men and women.
+
+- After age 50, the densities decrease significantly, meaning fewer
+  older individuals have education levels above high school.
+
+- The distributions for men and women are very similar, though women
+  show a slight advantage in the younger age group.
+
+**Gender Differences:**
+
+especially in the “High School Equivalent” category, male and female
+participants showed significant age differences, with younger males and
+older females significantly outnumbering those of the opposite sex at
+the same age.
+
+Create a scatter plot with a smooth trend line meeting the following
+needs:
+
+- Create a `total_activity` variable for each participant;
+
+- Plot the `total_activity` against `age`, by `sex` and `education`.
+
+``` r
+total_activity_df = 
+  nhanes_df |> 
+  group_by(seqn, gender, age, education) |> 
+ summarise(
+    total_activity = rowSums(across(starts_with("min")), na.rm = TRUE),
+    .groups = "drop"
+    )
+
+#plot
+activity_plot = ggplot(total_activity_df, aes(x = age, y = total_activity, color = gender)) +
+  geom_point(alpha = 0.5) +  
+  geom_smooth(method = "loess", se = FALSE) +  
+  scale_y_continuous(
+    limits = c(4000, 22500), 
+    breaks = seq(5000, 20000, by = 5000) 
+  ) + 
+  facet_wrap(~ education, scales = "free_y", labeller = as_labeller(edu_labels)) + 
+  labs(
+    title = "",
+    x = "Age",
+    y = "Total Activity",
+    color = "Gender"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "top")
+
+print(activity_plot)
+```
+
+    ## `geom_smooth()` using formula = 'y ~ x'
+
+    ## Warning: Removed 1 row containing non-finite outside the scale range
+    ## (`stat_smooth()`).
+
+    ## Warning: Removed 1 row containing missing values or values outside the scale range
+    ## (`geom_point()`).
+
+<figure>
+<img src="p8105_hw3_WL3011_files/figure-gfm/total_activity-1.png"
+alt="Figure 6. Total Activity vs Age by Gender and Education Level" />
+<figcaption aria-hidden="true">Figure 6. Total Activity vs Age by Gender
+and Education Level</figcaption>
+</figure>
+
+**Observations and Patterns:**
+
+Overall, across all education levels, total activity tends to decline
+with increasing age. Gender differences are consistent, with men
+generally being less active than women.
+
+1.  Less than High School:
+
+- A clear decline in activity as age increases. Both men and women show
+  a sharp drop after the age of 60.
+
+2.  High School Equivalent:
+
+- Activity declines gradually, but there is an increase around age 70
+  before dropping again.
+
+3.  More than High School:
+
+Activity levels are lower for both men and women, especially in early
+adulthood. There is less variability, with a smoother decline across all
+ages.
+
+### 
+
+``` r
+summary_df = 
+  nhanes_df |>
+  pivot_longer(
+    min1:min1440,
+    names_to = "minute",
+    values_to = "min_value",
+    names_prefix = "min"
+    ) |>
+  mutate(minute = as.numeric(minute)) |>
+  group_by(minute, gender, education) |>
+  summarise(mean_min = mean(min_value)) 
+```
+
+    ## `summarise()` has grouped output by 'minute', 'gender'. You can override using
+    ## the `.groups` argument.
+
+``` r
+# Create the 3-panel plot
+ggplot(summary_df, aes(x = minute, y = mean_min, color = gender)) +
+  geom_point(alpha = 0.1) +  
+  geom_smooth(method = "loess", se = FALSE) +  
+  facet_wrap(~ education, nrow = 1, labeller = as_labeller(edu_labels)) + 
+  labs(
+    x = "Minutes",
+    y = "Mean Activity Level",
+     color = "gender"
+  ) +
+  theme_minimal() +
+  theme(
+    strip.text = element_text(size = 12), 
+    plot.title = element_text(hjust = 0.5)  
+  )
+```
+
+    ## `geom_smooth()` using formula = 'y ~ x'
+
+<figure>
+<img src="p8105_hw3_WL3011_files/figure-gfm/total-1.png"
+alt="Figure 7. 24-Hour Activity Time Courses by Education Level and Sex" />
+<figcaption aria-hidden="true">Figure 7. 24-Hour Activity Time Courses
+by Education Level and Sex</figcaption>
+</figure>
 
 ## III. Problem 3
